# roomie-arm-ros2-gazebo

./: .gitignore  BRIDGE_CAMERA_TEST_CASES.md  DEVELOPMENT_ROADMAP.md  GAZEBO_CONFIGURATION_GUIDE.md  README.md  TESTCASE.md  USAGE_GUIDE.md  dist.npy  frames_2025-09-13_16.32.47.gv  mtx.npy  requirements.txt  test_kinematics.py
arm_bringup/: CMakeLists.txt  package.xml
arm_bringup/launch/: roomie_bringup.launch.py  urdf_validation.launch.py
arm_bringup/scripts/: robot_gui_controller.py
arm_description/: CMakeLists.txt  package.xml
arm_description/gazebo/: roomie_4dof.gazebo.xacro
arm_description/launch/: robot_state_publisher.launch.py
arm_description/ros2_control/: roomie_4dof.ros2_control.xacro
arm_gazebo/: CMakeLists.txt  package.xml
roomie_ac/: README.md  README_old.md  package.xml  requirements.txt  setup.cfg  test_ros2_control.py
roomie_msgs/: CMakeLists.txt  package.xml
roomiearm_ac/: README.md  package.xml  setup.cfg  setup.py
roomiearm_bringup/: CMakeLists.txt  package.xml
roomiearm_core/: README.md  package.xml  setup.cfg  setup.py
roomiearm_description/: CMakeLists.txt  package.xml
roomiearm_description/gazebo/: roomie_4dof.gazebo.xacro
roomiearm_description/launch/: robot_state_publisher.launch.py
roomiearm_description/meshes/: camera.stl  link_2.stl  link_4.stl
roomiearm_description/ros2_control/: roomie_4dof.ros2_control.xacro
roomiearm_description/urdf/: roomie_4dof.xacro
roomiearm_description/urdf/control/: gazebo_sim_ros2_control.urdf.xacro  roomiearm_ros2_control.urdf.xacro
roomiearm_description/urdf/mech/: arm.urdf.xacro  base.urdf.xacro
roomiearm_description/urdf/robots/: roomiearm.urdf.xacro
roomiearm_description/urdf/sensors/: camera.urdf.xacro
roomiearm_gazebo/: CMakeLists.txt  package.xml
roomiearm_hardware/: CMakeLists.txt  package.xml  plugin_description.xml
roomiearm_hardware/include/roomiearm_hardware/: roomiearm_hardware_interface.hpp
roomiearm_hardware/src/: roomiearm_hardware_interface.cpp
roomiearm_msgs/: CMakeLists.txt  package.xml
(+62 files in other folders)
